--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
   <link rel="stylesheet" href="css/index.css" type="text/css" media="all" />
 </head>
 <body>
-  <nav>
-    <h1><img class="logo" src="7.jpg" alt="mosestechcode logo" /></h1>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about-me">About</a></li>
+  <header>
+    <nav class="navbar">
+      <div class="logo">Moses Tech</div>
+      <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+      <ul class="nav-links" id="nav-links">
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#about-me">About</a></li>
+        <li><a href="#Portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
       <li><a href="#resume">Resume</a></li>
-      <li><a href="#Portfolio">Portfolio</a></li>
-    <li><a href="#contact">contact</a></li>
-    </ul>
-  </nav>  <section class="hero" id="home">
+      </ul>
+    </nav>
+  </header>
+  <section class="hero" id="home">
     <div class="hero-text">
       <p>hello it's me </p>
       <h1>moses_<span>kapira</span></h1>
@@ -170,5 +174,13 @@ His technical skills, creativity, and commitment to learning have made him a you
       </div>
     </div>
     </section>
+    <script>
+      const menuToggle = document.getElementById('menu-toggle');
+const navLinks = document.getElementById('nav-links');
+
+menuToggle.addEventListener('click', () => {
+  navLinks.classList.toggle('show');
+});
+    </script>
 </body>
-</html>
+  </html>
