--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav class="navbar">
-      <div class="logo">Moses Tech</div>
+      <div class="logo">  <img class="logo" src="7.jpg" alt="" /></div>
       <div class="menu-toggle" id="menu-toggle">&#9776;</div>
       <ul class="nav-links" id="nav-links">
         <li><a href="#hero">Home</a></li>
