--- a/index.html
+++ b/index.html
@@ -2,14 +2,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>mosestechcode web devempler</title>
+  <!-- Facebook & LinkedIn preview -->
+  <meta name="twitter:image" content="https://mosestechcode.netlify.app/Picsart_25-05-11_17-13-06-611.png">
+<meta property="og:type" content="website">
+<meta property="og:title" content="MosesTechCode - Full Stack Developer & AI Integrator">
+<meta property="og:description" content="Explore my projects in app development, web design, game development, and AI-powered solutions.">
+<meta property="og:image" content="https://mosestechcode.netlify.app/Picsart_25-05-11_17-13-06-611.png">
+<meta property="og:image" content="https://mosestechcode.netlify.app/path-to-your-image.jpg">
+<!-- Twitter preview -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="MosesTechCode - Developer Portfolio">
+<meta name="twitter:image" content="https://mosestechcode.netlify.app/path-to-your-image.jpg">
+  <title>MosesTechCode  | Web & AI Developer</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css" type="text/css" media="all" />
 </head>
 <body>
   <header>
     <nav class="navbar">
-      <div class="logo">  <img class="logo" src="7.jpg" alt="" /></div>
+      <div class="logo"><img class="logo" src="7.jpg" alt="" /></div>
       <div class="menu-toggle" id="menu-toggle">&#9776;</div>
       <ul class="nav-links" id="nav-links">
         <li><a href="#hero">Home</a></li>
@@ -93,10 +104,10 @@ His technical skills, creativity, and commitment to learning have made him a you
             <h3>Latest Project</h3>
             <div class="projects-grid">
                 <div class="project-item">
-                    <img src="https://via.placeholder.com/300/1e272e/2bcbba?text=Project+1" alt="Project 1">
+                    <img src="Screenshot_20250615-102244.jpg" alt="Project 1">
                 </div>
                 <div class="project-item">
-                    <img src="https://via.placeholder.com/300/1e272e/2bcbba?text=Project+2" alt="Project 2">
+                    <img src="Screenshot_20250615-102451.jpg" alt="Project 2">
                 </div>
                 <div class="project-item">
                     <img src="https://via.placeholder.com/300/1e272e/2bcbba?text=Project+3" alt="Project 3">
@@ -183,4 +194,4 @@ menuToggle.addEventListener('click', () => {
 });
     </script>
 </body>
-  </html>
+</html>
