--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ His technical skills, creativity, and commitment to learning have made him a you
                     <img src="Screenshot_20250615-102451.jpg" alt="Project 2">
                 </div>
                 <div class="project-item">
-                    <img src="https://via.placeholder.com/300/1e272e/2bcbba?text=Project+3" alt="Project 3">
+                    <img src="Screenshot_20250616-164948.jpg" alt="Project 3">
                 </div>
                 <div class="project-item">
                     <img src="https://via.placeholder.com/300/1e272e/2bcbba?text=Project+4" alt="Project 4">
@@ -167,7 +167,9 @@ His technical skills, creativity, and commitment to learning have made him a you
       <h1>contact me</h1>
       <br />
       <div class="input_container">
-        <form class="inputs" action="" method="get" accept-charset="utf-8">
+        <form class="inputs" action="https://api.web3forms.com/submit" method="POST">
+
+          <input type="hidden" name="access_key" value="84941ebd-0b90-4c34-af48-3fee0b04126d">
           <input type="email" name="" placeholder="email" />
           
           <input type="name" name="" id="" value=""  placeholder="firt_name"/>
@@ -179,7 +181,7 @@ His technical skills, creativity, and commitment to learning have made him a you
           <br>
           <textarea name="message" id="message" rows="8" cols="40" placeholder="message"></textarea>
           <br>
-          <button>submit</button>
+          <button type="submit">submit</button>
         </form>
         
       </div>
