--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MosesTechCode | Full Stack & AI Developer</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/index css" type="text/css" media="all" />
+  <link rel="stylesheet" href="css/index.css" type="text/css" media="all" />
 </head>
 <body>
 
