--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header>
   <nav class="navbar">
-    <div class="logo"><img src="/1750777838032.jpg" alt="Logo" /></div>
+    <div class="logo"><img src="7.jpg" alt="Logo" /></div>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
     <ul class="nav-links" id="nav-links">
       <li><a href="#home">Home</a></li>
