--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
       <div class="products links">
         
 
-      <a href="http://localhost:8080/rms/Login.php" target="_blank" class="btn">Live Site</a>
-      <a href="https://github.com/yourrepo" target="_blank" class="btn">Code</a>
+      <a href="brianjet.xo.je" target="_blank" class="btn">Live Site</a>
+      <a href="https://github.com/moses-TechCode/brainjet" target="_blank" class="btn">Code</a>
       </div>
     </div>
   </div>
