--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         
 
       <a href="brianjet.xo.je" target="_blank" class="btn">Live Site</a>
-      <a href="https://github.com/moses-TechCode/brainjet" target="_blank" class="btn">Code</a>
+      <a href="https://github.com/moses-TechCode/brainjet" class="btn">Code</a>
       </div>
     </div>
   </div>
