--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <div class="products links">
         
 
-      <a href="brianjet.xo.je" target="_blank" class="btn">Live Site</a>
+      <a href="http://brianjet.xo.je/index.php" target="_blank" class="btn">Live Site</a>
       <a href="https://github.com/moses-TechCode/brainjet" class="btn">Code</a>
       </div>
     </div>
